--- a/HW7/task1/task1.css
+++ b/HW7/task1/task1.css
@@ -32,3 +32,7 @@ body {
     color: var(--background-color);
     cursor: pointer;
 }
+
+.button:active {
+    box-shadow: 0 0 50px var(--primary-color);
+}
